用了kaiming初始化。 batch_size改为5. 训练epoches提高到5000. 用了梯度裁剪。 ----------------------- 但是以上效果不如torch自带的参数初始化效果。 估计是因为深度不大，所以集中在0的正态初始化效果好。

--- a/jupyterlab/Simple_RNN.ipynb
+++ b/jupyterlab/Simple_RNN.ipynb
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "cdd3ba33-cbb6-4c1d-bffd-3281f2d98df1",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "22409052-fc60-408c-81f9-c46c322cd7f2",
    "metadata": {},
    "outputs": [],
@@ -717,18 +717,18 @@
     "        self.out = nn.Linear(HIDDEN_SIZE, 1)\n",
     "        \n",
     "        # weight的参数用kaiming初始化；bias用zeros初始化；\n",
-    "        # for name, param in self.rnn.named_parameters():\n",
-    "        #     if name.startswith(\"weight\"):\n",
-    "        #         nn.init.kaiming_normal_(param, nonlinearity='relu')\n",
-    "        #     else:\n",
-    "        #         nn.init.zeros_(param)\n",
-    "\n",
-    "        # weight的参数用kaiming初始化；bias用zeros初始化；\n",
     "        for name, param in self.rnn.named_parameters():\n",
     "            if name.startswith(\"weight\"):\n",
-    "                nn.init.xavier_normal_(param)\n",
+    "                nn.init.kaiming_normal_(param, nonlinearity='relu')\n",
     "            else:\n",
     "                nn.init.zeros_(param)\n",
+    "\n",
+    "        # weight的参数用kaiming初始化；bias用zeros初始化；\n",
+    "        # for name, param in self.rnn.named_parameters():\n",
+    "        #     if name.startswith(\"weight\"):\n",
+    "        #         nn.init.xavier_normal_(param)\n",
+    "        #     else:\n",
+    "        #         nn.init.zeros_(param)\n",
     "                \n",
     "            \n",
     "    def forward(self, x, h_state):\n",
@@ -756,10 +756,7 @@
       "  (rnn): RNN(117, 1024, num_layers=2, batch_first=True, dropout=0.1)\n",
       "  (out): Linear(in_features=1024, out_features=1, bias=True)\n",
       ")\n",
-      "Tue Feb 22 16:43:55 2022\n",
-      "0 of 100 epoch loss: 0.004569\n",
-      "10 of 100 epoch loss: 0.001421\n",
-      "20 of 100 epoch loss: 0.001044\n"
+      "Wed Feb 23 08:37:49 2022\n"
      ]
     }
    ],
@@ -772,13 +769,13 @@
     "loss_func = nn.MSELoss()\n",
     "optimizer = torch.optim.Adam(rnn.parameters(), lr=LR, weight_decay=1e-10)\n",
     "\n",
-    "epoches = 100\n",
+    "epoches = 5000\n",
     "i = 0\n",
     "h_state = None\n",
     "\n",
     "print(time.ctime())\n",
     "\n",
-    "# 训练 RNN 模型; 计划训练 100 轮\n",
+    "# 训练 RNN 模型; 计划训练 5000 轮\n",
     "for epoch in range(epoches):\n",
     "    for step in range(train_batch_count):\n",
     "        rnn = rnn.double()\n",
@@ -789,13 +786,14 @@
     "        loss = loss_func(pred, train_y[i])\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
+    "        torch.nn.utils.clip_grad_norm_(rnn.parameters(), max_norm=20, norm_type=2)\n",
     "        optimizer.step()\n",
     "\n",
     "        if (i+1)%train_batch_count == 0:\n",
     "            i=0\n",
     "        else:\n",
     "            i=i+1\n",
-    "    if epoch%10 == 0:\n",
+    "    if (epoch+1)%100 == 0:\n",
     "        print(\"{} of {} epoch loss: {:.6f}\".format(epoch, epoches, loss))\n",
     "            \n",
     "print(time.ctime())"
@@ -885,7 +883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
