--- a/jupyterlab/Simple_LTSM.ipynb
+++ b/jupyterlab/Simple_LTSM.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "93673132-3006-4021-a0cd-6ca155ab1a0a",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
     }
    ],
    "source": [
-    "# GPU -- 准备来做一个GPU版本的RNN\n",
+    "# GPU -- 准备来做一个GPU版本的LSTM\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.autograd import Variable\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "89afd6a6-b863-43bc-8884-34c3b669701e",
    "metadata": {},
    "outputs": [],
@@ -163,32 +163,101 @@
     "TIME_STEP = seq_len                                        # 一般这个单独设定，这里为了简单，还是直接就等于seq_len的方便。其实也就是等于最长的那个sequence length\n",
     "INPUT_SIZE = 117\n",
     "HIDDEN_SIZE = 768\n",
+    "NUM_LAYERS = 3\n",
     "\n",
-    "class RNN(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(RNN, self).__init__()\n",
+    "class LSTMModel(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_layer_size, num_layers, output_size, dropout=0.2):\n",
+    "        super().__init__()\n",
+    "        self.linear_1 = nn.Linear(input_size, hidden_layer_size)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.lstm = nn.LSTM(input_size=hidden_layer_size, hidden_size=hidden_layer_size, num_layers=num_layers, batch_first=True, dropout=0.2)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.linear_2 = nn.Linear(hidden_layer_size, output_size)\n",
     "        \n",
-    "        self.rnn = nn.RNN(\n",
-    "                input_size = INPUT_SIZE,                    # 输入 x 的feature 维度\n",
-    "                hidden_size = HIDDEN_SIZE,                  # 隐状态 hidden_state 中的feature维度\n",
-    "                num_layers = 5,                             # RNN 的层数\n",
-    "                nonlinearity='relu',                        # 指定激活函数 [‘tanh’ | ’relu’]. 默认: ‘tanh’\n",
-    "                bias = True,                                # 如果是 False , 那么 RNN 层就不会使用偏置权重 b_ih 和 b_hh, 默认: True\n",
-    "                batch_first = True,                         # 如果 True, 输入Tensor的shape应该是(batch_size, seq_len, features),并且输出也是一样.\n",
-    "                dropout = 0.1,                                # 如果值非零, 那么除了最后一层外, 其它层的输出都会套上一个 dropout 层\n",
-    "                bidirectional = False                       # 如果 True , 将会变成一个双向 RNN, 默认为 False\n",
-    "        )\n",
-    "        \n",
-    "        self.out = nn.Linear(HIDDEN_SIZE, 1)\n",
-    "        \n",
-    "    def forward(self, x, h_state):\n",
-    "        r_out, h_state = self.rnn(x, h_state)\n",
-    "        outs = []\n",
-    "        for time_step in range(TIME_STEP):\n",
-    "            outs.append(self.out(r_out[:, time_step, :]))\n",
+    "        self.init_weights()\n",
     "\n",
-    "        return torch.stack(outs, dim=1), h_state"
+    "    def init_weights(self):\n",
+    "        for name, param in self.lstm.named_parameters():\n",
+    "            if 'bias' in name:\n",
+    "                 nn.init.constant_(param, 0.0)\n",
+    "            elif 'weight_ih' in name:\n",
+    "                 nn.init.kaiming_normal_(param)\n",
+    "            elif 'weight_hh' in name:\n",
+    "                 nn.init.orthogonal_(param)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        batchsize = x.shape[0]\n",
+    "\n",
+    "        # layer 1\n",
+    "        x = self.linear_1(x)\n",
+    "        x = self.relu(x)\n",
+    "        \n",
+    "        # LSTM layer\n",
+    "        lstm_out, self.hidden_cell = self.lstm(x)\n",
+    "\n",
+    "        lstm_out = self.dropout(lstm_out)\n",
+    "        predictions = self.linear_2(lstm_out)\n",
+    "        return predictions\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a955f38-4ff2-477a-baf3-80289544d046",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 of 100 epoch loss: 0.000345\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 初始化 LSTM 模型\n",
+    "model = LSTMModel(input_size=INPUT_SIZE, hidden_layer_size=HIDDEN_SIZE, num_layers=NUM_LAYERS, output_size=1)\n",
+    "model = model.to(device)\n",
+    "LR = 5e-5\n",
+    "loss_func = nn.MSELoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=LR, weight_decay=1e-8)\n",
+    "\n",
+    "# 训练 LSTM 模型; \n",
+    "i = 0\n",
+    "epoches = 100\n",
+    "\n",
+    "for epoch in range(epoches):\n",
+    "    for step in range(train_batch_count):\n",
+    "        # print(train_x[i])\n",
+    "        # print(train_x[i].shape)\n",
+    "        model = model.double()\n",
+    "\n",
+    "        pred = model(train_x[i])\n",
+    "        # pred.to('cpu')\n",
+    "        # print(\"pred   : {}\".format(pred.shape))\n",
+    "        # print(\"train_y: {}\".format(train_y[i].shape))\n",
+    "        loss = loss_func(pred, train_y[i])\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=20, norm_type=2)\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        if (i+1)%train_batch_count == 0:\n",
+    "            i=0\n",
+    "        else:\n",
+    "            i=i+1\n",
+    "    if (epoch+1)%5 == 0:\n",
+    "        print(\"{} of {} epoch loss: {:.6f}\".format(epoch, epoches, loss.item()))\n",
+    "print(\"Done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de03d0d2-8f72-4a41-9f33-20fa64aa951e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
