更新了RNN运算结果。

--- a/jupyterlab/Simple_RNN.ipynb
+++ b/jupyterlab/Simple_RNN.ipynb
@@ -756,7 +756,12 @@
       "  (rnn): RNN(117, 1024, num_layers=2, batch_first=True, dropout=0.1)\n",
       "  (out): Linear(in_features=1024, out_features=1, bias=True)\n",
       ")\n",
-      "Wed Feb 23 08:37:49 2022\n"
+      "Wed Feb 23 08:37:49 2022\n",
+      "99 of 5000 epoch loss: 0.012749\n",
+      "199 of 5000 epoch loss: 0.004040\n",
+      "299 of 5000 epoch loss: 0.002083\n",
+      "399 of 5000 epoch loss: 0.001020\n",
+      "499 of 5000 epoch loss: 0.001260\n"
      ]
     }
    ],
