--- a/jupyterlab/Simple_LTSM.ipynb
+++ b/jupyterlab/Simple_LTSM.ipynb
@@ -537,8 +537,7 @@
     "\n",
     "loss = loss_func(pred, test_y[0])\n",
     "print(\"loss: {:.6f}\".format(loss.item()))\n",
-    "print(\"今天预测涨跌: {}\".format(pred[-1][-2].data*100))\n",
-    "print(\"明天预测涨跌: {}\".format(pred[-1][-1].data*100))\n",
+    "print(\"预测明天涨跌: {}\".format(pred[-1][-1].data*100))\n",
     "\n",
     "# actual_line = np.array(test_y[0]).flatten().tolist()\n",
     "# pred_line = pred.data.numpy().flatten().tolist()\n",
@@ -576,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
