现在的RNN稍微正常了。可以看明白了。

--- a/jupyterlab/Simple_RNN.ipynb
+++ b/jupyterlab/Simple_RNN.ipynb
@@ -56,7 +56,7 @@
     "        # x (batch, time_step, input_size)              # 这是RNN的ｘ的维度            (批量, 序列长度, 输入的特征维度）\n",
     "        # h_state (n_layers, batch, hidden_size)        # 这是hidden_state的维度       (层数×方向, 批量, 输出的特征维度）/*方向：单向是１；双向是２*/\n",
     "        # r_out (batch, time_step, hidden_size)         # 这是网络实际输出的r_out的维度 (批量，序列长度，输出的特征维度X方向）\n",
-    "        r_out, h_state = self.rnn(x, h_state)           # RNN每次输入x, hidden_state; 输出r_out, hidden_state; 给定一个序列x,每个x.size=[batch_size, feature].\n",
+    "        r_out, h_state = self.rnn(x, h_state)           # RNN每次输入x, hidden_state; 输出r_out, hidden_state; 给定一个序列x,每个x.size=[BATCH_SIZE, feature].\n",
     "        outs = []\n",
     "        for time_step in range(r_out.size(1)):\n",
     "            outs.append(self.out(r_out[:, time_step, :]))\n",
@@ -303,11 +303,11 @@
     "\n",
     "# # 数据转成 batch 的格式\n",
     "# batch_count = 8               # 把训练数据切割成 batch_count 个batch\n",
-    "# batch_size = 15               # 每个batch里面有 batch_size 个数据\n",
+    "# BATCH_SIZE = 15               # 每个batch里面有 BATCH_SIZE 个数据\n",
     "\n",
     "# # 把训练数据分成 8 个batch，每个 15 个数据\n",
-    "# train_x = train_x.reshape(batch_count, batch_size, 117)\n",
-    "# train_y = train_y.reshape(batch_count, batch_size, 1)\n",
+    "# train_x = train_x.reshape(batch_count, BATCH_SIZE, 117)\n",
+    "# train_y = train_y.reshape(batch_count, BATCH_SIZE, 1)\n",
     "# # 把测试数据分成 2 个batch，每个 batch 有 15 个数据\n",
     "# test_x = test_x.reshape(2, 15, 117)\n",
     "# test_y = test_y.reshape(2, 15, 1)"
@@ -320,13 +320,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 方法2，将数据按照batch_size的窗口进行滑动，每个窗口数据做一组\n",
+    "# 方法2，将数据按照BATCH_SIZE的窗口进行滑动，每个窗口数据做一组\n",
     "\n",
     "# # 数据转成sequence的格式，这里定义每个seq的长度\n",
     "seq_len = 15\n",
-    "batch_size = 2                                                    # 注意：batch_size是要能够整除seq_count的\n",
+    "BATCH_SIZE = 2                                                    # 注意：BATCH_SIZE是要能够整除seq_count的\n",
     "\n",
-    "# 把数据切换成 batch_size 的一个个batch\n",
+    "# 把数据切换成 BATCH_SIZE 的一个个batch\n",
     "rolling_data = pd.DataFrame()\n",
     "for i in dataset.rolling(seq_len):\n",
     "    if i.shape[0] == seq_len:\n",
@@ -339,12 +339,12 @@
     "print(\"seq length: {}\".format(seq_len))\n",
     "\n",
     "\n",
-    "total_batch_count = int(rolling_data.shape[0]/batch_size)                          # 把数据规划成 batch_count 个 batch\n",
+    "total_batch_count = int(rolling_data.shape[0]/BATCH_SIZE)                          # 把数据规划成 batch_count 个 batch\n",
     "\n",
     "print(\"total batch count: {}\".format(total_batch_count))\n",
-    "print(\"batch size: {}\".format(batch_size))\n",
+    "print(\"batch size: {}\".format(BATCH_SIZE))\n",
     "\n",
-    "rolling_data = rolling_data.reshape(total_batch_count, batch_size, seq_len, 118)  # 把数据转成 total_batch_count x batch_size x seq_len x in_dim 格式\n",
+    "rolling_data = rolling_data.reshape(total_batch_count, BATCH_SIZE, seq_len, 118)  # 把数据转成 total_batch_count x BATCH_SIZE x seq_len x in_dim 格式\n",
     "rolling_data = torch.tensor(rolling_data)\n",
     "print(\"rolling_data: {}\".format(rolling_data.shape))\n",
     "\n",
@@ -356,8 +356,8 @@
     "test  = rolling_data[train_batch_count:, :, :, :]\n",
     "\n",
     "\n",
-    "# train = rolling_data.iloc[:train_batch_count*batch_size, :].reset_index(drop=True)\n",
-    "# test  = rolling_data.iloc[train_batch_count*batch_size:, :].reset_index(drop=True)\n",
+    "# train = rolling_data.iloc[:train_batch_count*BATCH_SIZE, :].reset_index(drop=True)\n",
+    "# test  = rolling_data.iloc[train_batch_count*BATCH_SIZE:, :].reset_index(drop=True)\n",
     "\n",
     "# train_x, train_y = train.iloc[:, 1:], train.iloc[:, 0]\n",
     "# test_x, test_y = test.iloc[:, 1:], test.iloc[:, 0]\n",
@@ -387,19 +387,19 @@
     "\n",
     "# # batch first\n",
     "# # 把训练数据分成 ... 个batch，每 batch 有 15 个sequence\n",
-    "# train_x = train_x.reshape(train_batch_count, batch_size, seq_len, 117)\n",
-    "# train_y = train_y.reshape(train_batch_count, batch_size, seq_len, 1)\n",
+    "# train_x = train_x.reshape(train_batch_count, BATCH_SIZE, seq_len, 117)\n",
+    "# train_y = train_y.reshape(train_batch_count, BATCH_SIZE, seq_len, 1)\n",
     "# # 把测试数据分成 1 个batch，每个 batch 有 15 个sequence\n",
-    "# test_x = test_x.reshape(test_batch_count, batch_size, seq_len, 117)\n",
-    "# test_y = test_y.reshape(test_batch_count, batch_size, seq_len, 1)\n",
+    "# test_x = test_x.reshape(test_batch_count, BATCH_SIZE, seq_len, 117)\n",
+    "# test_y = test_y.reshape(test_batch_count, BATCH_SIZE, seq_len, 1)\n",
     "\n",
     "# seq first\n",
     "# # 把训练数据分成 ... 个batch，每 batch 有 15 个sequence\n",
-    "# train_x = train_x.reshape(batch_size, train_batch_count, 117)\n",
-    "# train_y = train_y.reshape(batch_size, train_batch_count, 1)\n",
+    "# train_x = train_x.reshape(BATCH_SIZE, train_batch_count, 117)\n",
+    "# train_y = train_y.reshape(BATCH_SIZE, train_batch_count, 1)\n",
     "# # 把测试数据分成 1 个batch，每个 batch 有 15 个sequence\n",
-    "# test_x = test_x.reshape(batch_size, test_batch_count, 117)\n",
-    "# test_y = test_y.reshape(batch_size, test_batch_count, 1)\n",
+    "# test_x = test_x.reshape(BATCH_SIZE, test_batch_count, 117)\n",
+    "# test_y = test_y.reshape(BATCH_SIZE, test_batch_count, 1)\n",
     "# print(\"train_x: {}\".format(train_x.size))\n",
     "# print(\"train_y: {}\".format(train_y.size))\n",
     "# print(\"test_x:  {}\".format(test_x.size))\n",
@@ -429,7 +429,7 @@
     "                num_layers = 5,                             # RNN 的层数\n",
     "                nonlinearity='relu',                        # 指定激活函数 [‘tanh’ | ’relu’]. 默认: ‘tanh’\n",
     "                bias = True,                                # 如果是 False , 那么 RNN 层就不会使用偏置权重 b_ih 和 b_hh, 默认: True\n",
-    "                batch_first = True,                         # 如果 True, 输入Tensor的shape应该是(batch_size, seq_len, features),并且输出也是一样.\n",
+    "                batch_first = True,                         # 如果 True, 输入Tensor的shape应该是(BATCH_SIZE, seq_len, features),并且输出也是一样.\n",
     "                dropout = 0.1,                                # 如果值非零, 那么除了最后一层外, 其它层的输出都会套上一个 dropout 层\n",
     "                bidirectional = False                       # 如果 True , 将会变成一个双向 RNN, 默认为 False\n",
     "        )\n",
@@ -515,10 +515,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3d36d945-304a-4b17-be13-b5ef1020c2b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(150, 118)\n",
+      "rolling_data shape: (130, 21, 118)\n",
+      "seq count: 130\n",
+      "seq length: 21\n",
+      "total batch count: 130\n",
+      "batch size: 1\n",
+      "rolling_data: torch.Size([130, 1, 21, 118])\n",
+      "train_x: torch.Size([129, 1, 21, 117])\n",
+      "train_y: torch.Size([129, 1, 21, 1])\n",
+      "test_x:  torch.Size([1, 1, 21, 117])\n",
+      "test_y:  torch.Size([1, 1, 21, 1])\n",
+      "train_batch_count: 129\n",
+      "test_batch_count:  1\n"
+     ]
+    }
+   ],
    "source": [
     "# GPU -- 准备来做一个GPU版本的RNN\n",
     "import torch\n",
@@ -541,13 +561,13 @@
     "print(dataset.shape)\n",
     "# print(dataset.tail())\n",
     "\n",
-    "# 方法2，将数据按照batch_size的窗口进行滑动，每个窗口数据做一组\n",
+    "# 方法2，将数据按照BATCH_SIZE的窗口进行滑动，每个窗口数据做一组\n",
     "\n",
     "# # 数据转成sequence的格式，这里定义每个seq的长度\n",
     "seq_len = 21\n",
-    "batch_size = 5                                                    # 注意：batch_size是要能够整除seq_count的\n",
+    "BATCH_SIZE = 1                                                    # 注意：BATCH_SIZE是要能够整除seq_count的\n",
     "\n",
-    "# 把数据切换成 batch_size 的一个个batch\n",
+    "# 把数据切换成 BATCH_SIZE 的一个个batch\n",
     "rolling_data = pd.DataFrame()\n",
     "for i in dataset.rolling(seq_len):\n",
     "    if i.shape[0] == seq_len:\n",
@@ -555,17 +575,17 @@
     "\n",
     "rolling_data = rolling_data.values.reshape(-1, seq_len, 118)                 # 数据一共是 seq_count x seq_len x in_dim\n",
     "\n",
-    "print(\"rolling_data: {}\".format(rolling_data.shape))\n",
+    "print(\"rolling_data shape: {}\".format(rolling_data.shape))\n",
     "print(\"seq count: {}\".format(rolling_data.shape[0]))                 # 所以一共有 seq_count 列数据，每一行的数据是118维 （包括y）\n",
     "print(\"seq length: {}\".format(seq_len))\n",
     "\n",
     "\n",
-    "total_batch_count = int(rolling_data.shape[0]/batch_size)                          # 把数据规划成 batch_count 个 batch\n",
+    "total_batch_count = int(rolling_data.shape[0]/BATCH_SIZE)                          # 把数据规划成 batch_count 个 batch\n",
     "\n",
     "print(\"total batch count: {}\".format(total_batch_count))\n",
-    "print(\"batch size: {}\".format(batch_size))\n",
+    "print(\"batch size: {}\".format(BATCH_SIZE))\n",
     "\n",
-    "rolling_data = rolling_data.reshape(total_batch_count, batch_size, seq_len, 118)  # 把数据转成 total_batch_count x batch_size x seq_len x in_dim 格式\n",
+    "rolling_data = rolling_data.reshape(total_batch_count, BATCH_SIZE, seq_len, 118)  # 把数据转成 total_batch_count x BATCH_SIZE x seq_len x in_dim 格式\n",
     "rolling_data = torch.tensor(rolling_data)\n",
     "print(\"rolling_data: {}\".format(rolling_data.shape))\n",
     "\n",
@@ -594,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a148659b-0dcb-441c-802e-727c30bc0b73",
    "metadata": {},
    "outputs": [],
@@ -615,12 +635,12 @@
     "                num_layers = NUM_LAYERS,                    # RNN 的层数\n",
     "                nonlinearity='relu',                        # 指定激活函数 [‘tanh’ | ’relu’]. 默认: ‘tanh’\n",
     "                bias = True,                                # 如果是 False , 那么 RNN 层就不会使用偏置权重 b_ih 和 b_hh, 默认: True\n",
-    "                batch_first = True,                         # 如果 True, 输入Tensor的shape应该是(batch_size, seq_len, features),并且输出也是一样.\n",
+    "                batch_first = True,                         # 如果 True, 输入Tensor的shape应该是(BATCH_SIZE, seq_len, features),并且输出也是一样.\n",
     "                dropout = 0.2,                              # 如果值非零, 那么除了最后一层外, 其它层的输出都会套上一个 dropout 层\n",
     "                bidirectional = False                       # 如果 True , 将会变成一个双向 RNN, 默认为 False\n",
     "        )\n",
     "        \n",
-    "        self.out = nn.Linear(HIDDEN_SIZE, 1)\n",
+    "        self.fc_out = nn.Linear(HIDDEN_SIZE, 1)\n",
     "        \n",
     "        # weight的参数用kaiming初始化；bias用zeros初始化；\n",
     "        # for name, param in self.rnn.named_parameters():\n",
@@ -637,13 +657,17 @@
     "        #         nn.init.zeros_(param)\n",
     "                \n",
     "            \n",
-    "    def forward(self, x, h_state):\n",
-    "        r_out, h_state = self.rnn(x, h_state)\n",
-    "        outs = []\n",
-    "        for time_step in range(TIME_STEP):\n",
-    "            outs.append(self.out(r_out[:, time_step, :]))\n",
+    "    def forward(self, x):\n",
+    "        h_state = torch.zeros(NUM_LAYERS, BATCH_SIZE, HIDDEN_SIZE).double().to(device)\n",
+    "        r_out, h_state = self.rnn(x, h_state)                         # compute from [1, seq_len, input_dim] to [1, seq_len, hidden_dim] \n",
     "\n",
-    "        return torch.stack(outs, dim=1), h_state\n"
+    "        outs = []\n",
+    "        \n",
+    "        for time_step in range(TIME_STEP):\n",
+    "            out = self.fc_out(r_out[:, time_step, :])                 # compute from [1, 1, hidden_dim] to [output_dim]\n",
+    "            outs.append(out)                                          # Add all seq_len data to list like : [[pred1, pred2,...,predn]]\n",
+    "        \n",
+    "        return torch.stack(outs, dim=1)                               # conver from [[pred1,...,predn]] to [[[pred1], ... ,[prdn]]]\n"
    ]
   },
   {
@@ -656,41 +680,45 @@
    "outputs": [],
    "source": [
     "# GPU -- 初始化 RNN 模型\n",
-    "rnn = RNN()\n",
-    "rnn.to(device)\n",
-    "print(rnn)\n",
-    "LR = 1e-6\n",
-    "loss_func = nn.MSELoss()\n",
-    "optimizer = torch.optim.Adam(rnn.parameters(), lr=LR, weight_decay=1e-10)\n",
+    "model = RNN()\n",
+    "model.double().to(device)\n",
+    "print(model)\n",
+    "LR = 1e-5\n",
+    "loss_func = nn.MSELoss(reduction=\"mean\")\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=LR, weight_decay=1e-11)\n",
     "\n",
-    "epoches = 100\n",
-    "i = 0\n",
-    "h_state = None\n",
+    "epoches = 1000\n",
+    "\n",
+    "batch_loss_list = []\n",
+    "epoch_loss = 0\n",
     "\n",
     "print(time.ctime())\n",
     "\n",
     "# 训练 RNN 模型; 计划训练 100 轮\n",
     "for epoch in range(epoches):\n",
     "    for step in range(train_batch_count):\n",
-    "        rnn = rnn.double()\n",
-    "        pred, h_state = rnn(train_x[i], h_state)\n",
+    "        pred = model(train_x[step])\n",
     "        pred.to(device)\n",
-    "        h_state = h_state.data.to(device)\n",
+    "        # h_state = h_state.data.to(device)\n",
     "\n",
-    "        loss = loss_func(pred, train_y[i])\n",
+    "        loss = loss_func(pred, train_y[step])\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        torch.nn.utils.clip_grad_norm_(rnn.parameters(), max_norm=20, norm_type=2)\n",
     "        optimizer.step()\n",
     "\n",
-    "        if (i+1)%train_batch_count == 0:\n",
-    "            i=0\n",
-    "        else:\n",
-    "            i=i+1\n",
+    "        batch_loss_list.append(loss.cpu().detach().numpy())\n",
+    "        \n",
+    "        epoch_loss += loss.data\n",
+    "\n",
     "    if (epoch+1)%10 == 0:\n",
-    "        print(\"{} of {} epoch loss: {:.6f}\".format(epoch, epoches, loss))\n",
-    "            \n",
-    "print(time.ctime())"
+    "        print(\"{} of {} epoches get epoch_loss: {:.6f}\".format(epoch, epoches, epoch_loss))\n",
+    "    epoch_loss = 0\n",
+    "    \n",
+    "                    \n",
+    "print(time.ctime())\n",
+    "plt.plot(batch_loss_list)\n",
+    "plt.show()"
    ]
   },
   {
@@ -701,31 +729,36 @@
    "outputs": [],
    "source": [
     "# GPU -- 用模型来做测试数据的误差\n",
-    "h_state = None\n",
-    "pred, h_state = rnn(test_x[0], h_state)\n",
     "\n",
-    "print(test_x.shape)\n",
-    "print(test_x[0].shape)\n",
-    "print(pred.shape)\n",
-    "print(test_y[0].shape)\n",
+    "for step in range(test_batch_count):\n",
+    "    pred = model(test_x[step])\n",
     "\n",
-    "test_y=test_y.cpu()\n",
-    "pred = pred.cpu()\n",
+    "    loss = loss_func(pred, test_y[step].to(device))\n",
     "\n",
-    "loss = loss_func(pred, test_y[0])\n",
-    "print(\"loss: {:.6f}\".format(loss))\n",
+    "    print(\"Prediction: {:.2f}\".format(float(pred[-1][-1].data)))\n",
+    "    \n",
+    "    print(\"loss : {:.2f}\".format(float(loss.data)))\n",
     "\n",
-    "actual_line = np.array(test_y[0]).flatten().tolist()\n",
-    "pred_line = pred.data.numpy().flatten().tolist()\n",
+    "    print(test_y[step][-1].flatten().shape)\n",
+    "    print(pred[-1].flatten().shape)\n",
+    "    \n",
+    "    # actual_line = test_y[step][-1].cpu().detach().flatten().numpy()\n",
+    "    # pred_line   = pred[-1].cpu().detach().flatten().numpy()\n",
+    "    \n",
+    "    actual_line = test_y[step].cpu().detach().flatten().numpy()\n",
+    "    pred_line   = pred.cpu().detach().flatten().numpy()\n",
+    "    \n",
+    "    plt.plot(actual_line, 'r--')\n",
+    "    plt.plot(pred_line, 'b-')\n",
+    "    plt.show()\n",
+    "    \n",
+    "# actual_line = np.array(test_y[-1]).flatten().tolist()\n",
+    "# pred_line = pred.data.numpy().flatten().tolist()\n",
     "\n",
     "# actual_line = np.array(test_y[0][-1]).flatten().tolist()\n",
     "# pred_line = pred[-1].data.numpy().flatten().tolist()\n",
     "\n",
-    "\n",
-    "print(len(actual_line) == len(pred_line))\n",
-    "plt.plot(actual_line, 'r--')\n",
-    "plt.plot(pred_line, 'b-')\n",
-    "plt.show()"
+    "\n"
    ]
   },
   {
