--- a/jupyterlab/Simple_RNN.ipynb
+++ b/jupyterlab/Simple_RNN.ipynb
@@ -677,7 +677,19 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RNN(\n",
+      "  (rnn): RNN(117, 768, num_layers=3, batch_first=True, dropout=0.2)\n",
+      "  (fc_out): Linear(in_features=768, out_features=1, bias=True)\n",
+      ")\n",
+      "Fri Mar  4 21:53:52 2022\n"
+     ]
+    }
+   ],
    "source": [
     "# GPU -- 初始化 RNN 模型\n",
     "model = RNN()\n",
@@ -704,7 +716,7 @@
     "        loss = loss_func(pred, train_y[step])\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
-    "        torch.nn.utils.clip_grad_norm_(rnn.parameters(), max_norm=20, norm_type=2)\n",
+    "        torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=20, norm_type=2)\n",
     "        optimizer.step()\n",
     "\n",
     "        batch_loss_list.append(loss.cpu().detach().numpy())\n",
