股票数据扩充到250天；优化了LSTM和RNN模型。

--- a/jupyterlab/Simple_RNN.ipynb
+++ b/jupyterlab/Simple_RNN.ipynb
@@ -515,30 +515,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "3d36d945-304a-4b17-be13-b5ef1020c2b5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(180, 123)\n",
-      "rolling_data shape: (136, 45, 123)\n",
-      "seq count: 136\n",
-      "seq length: 45\n",
-      "total batch count: 136\n",
-      "batch size: 1\n",
-      "rolling_data: torch.Size([136, 1, 45, 123])\n",
-      "train_x: torch.Size([135, 1, 45, 122])\n",
-      "train_y: torch.Size([135, 1, 45, 1])\n",
-      "test_x:  torch.Size([1, 1, 45, 122])\n",
-      "test_y:  torch.Size([1, 1, 45, 1])\n",
-      "train_batch_count: 135\n",
-      "test_batch_count:  1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# GPU -- 准备来做一个GPU版本的RNN\n",
     "import torch\n",
@@ -614,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "a148659b-0dcb-441c-802e-727c30bc0b73",
    "metadata": {},
    "outputs": [],
@@ -624,6 +604,11 @@
     "INPUT_SIZE = 122\n",
     "HIDDEN_SIZE = 768\n",
     "NUM_LAYERS = 8\n",
+    "\n",
+    "np.random.seed(3)\n",
+    "torch.manual_seed(3)\n",
+    "torch.cuda.manual_seed(3)\n",
+    "torch.backends.cudnn.deterministic = True\n",
     "\n",
     "class RNN(nn.Module):\n",
     "    def __init__(self):\n",
@@ -681,41 +666,26 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9 of 300 epoches get epoch_loss: 86.080122\n",
-      "[0.000387420489]\n",
-      "19 of 300 epoches get epoch_loss: 21.419054\n",
-      "[0.0001350851717672993]\n",
-      "29 of 300 epoches get epoch_loss: 8.243068\n",
-      "[4.7101286972462485e-05]\n",
-      "39 of 300 epoches get epoch_loss: 5.384083\n",
-      "[1.6423203268260675e-05]\n",
-      "49 of 300 epoches get epoch_loss: 5.547248\n",
-      "[5.7264168970223554e-06]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "# GPU -- 初始化 RNN 模型\n",
     "model = RNN()\n",
     "model.double().to(device)\n",
-    "LR = 1e-3\n",
-    "epoches = 300\n",
+    "LR = 1e-5\n",
+    "epoches = 500\n",
     "\n",
     "epoch_loss_list = []\n",
     "epoch_loss = 0\n",
     "lr_list = []\n",
     "\n",
+    "\n",
+    "\n",
     "# loss_func = nn.L1Loss()\n",
     "loss_func = nn.MSELoss(reduction=\"mean\")\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LR, weight_decay=1e-3)\n",
     "# scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=epoches, eta_min=0, last_epoch=-1)\n",
-    "scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.9, last_epoch=-1)\n",
+    "scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.995, last_epoch=-1)\n",
     "\n",
     "\n",
     "# 训练 RNN 模型; 计划训练 100 轮\n",
@@ -737,13 +707,14 @@
     "    if (epoch+1)%10 == 0:\n",
     "        print(\"{} of {} epoches get epoch_loss: {:.6f}\".format(epoch, epoches, epoch_loss))\n",
     "        lr_list.append(optimizer.state_dict()['param_groups'][0]['lr'])\n",
+    "        epoch_loss_list.append(epoch_loss.cpu())\n",
     "        # print(optimizer.state_dict()['param_groups'][0]['lr'])\n",
     "        # for p in optimizer.param_groups:\n",
     "        #     p['lr'] *= 0.9\n",
     "        print(scheduler.get_last_lr())\n",
     "    \n",
     "    scheduler.step()    \n",
-    "    epoch_loss_list.append(epoch_loss.cpu())\n",
+    "\n",
     "    epoch_loss = 0\n",
     "\n",
     "plt.plot(lr_list)\n",
