--- a/jupyterlab/LTSM_Predict.ipynb
+++ b/jupyterlab/LTSM_Predict.ipynb
@@ -198,8 +198,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9 of 100 epoch loss: 0.968229\n",
-      "0.0001\n"
+      "9 of 100 epoch loss: 0.960093\n",
+      "learning rate: 0.01\n",
+      "19 of 100 epoch loss: 0.960457\n",
+      "learning rate: 0.009000000000000001\n",
+      "29 of 100 epoch loss: 0.958666\n",
+      "learning rate: 0.008100000000000001\n",
+      "39 of 100 epoch loss: 0.957986\n",
+      "learning rate: 0.007290000000000001\n",
+      "49 of 100 epoch loss: 0.958070\n",
+      "learning rate: 0.006561000000000002\n"
      ]
     }
    ],
@@ -213,7 +221,7 @@
     "# 初始化 LSTM 模型\n",
     "model = LSTMModel(input_size=INPUT_SIZE, hidden_layer_size=HIDDEN_SIZE, num_layers=NUM_LAYERS, output_size=1)\n",
     "model = model.to(device)\n",
-    "LR = 1e-4\n",
+    "LR = 1e-2\n",
     "loss_func = nn.MSELoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LR, weight_decay=1e-3)\n",
     "\n",
@@ -239,6 +247,8 @@
     "    if (epoch+1)%10 == 0:\n",
     "        print(\"{} of {} epoch loss: {:.6f}\".format(epoch, epoches, epoch_loss.item()))\n",
     "        print(\"learning rate: {}\".format(optimizer.state_dict()['param_groups'][0]['lr']))\n",
+    "        for p in optimizer.param_groups:\n",
+    "            p['lr'] *= 0.9\n",
     "    \n",
     "    epoch_loss = 0\n"
    ]
