--- a/jupyterlab/LTSM_Predict.ipynb
+++ b/jupyterlab/LTSM_Predict.ipynb
@@ -2,35 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "29e8e9b1-6f28-4e13-bd1b-696c777ca855",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "9ab92594-dc83-4c86-a2f5-9f938d337144",
+   "execution_count": 1,
+   "id": "a12c3277-a234-4007-8bf4-cb7ea2560565",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(250, 123)\n",
-      "rolling_data shape: (206, 45, 123)\n",
-      "seq count: 206\n",
-      "seq length: 45\n",
-      "total batch count: 206\n",
-      "batch size: 1\n",
-      "rolling_data: torch.Size([206, 1, 45, 123])\n",
-      "train_x: torch.Size([205, 1, 45, 122])\n",
-      "train_y: torch.Size([205, 1, 45, 1])\n",
-      "test_x:  torch.Size([1, 1, 45, 122])\n",
-      "test_y:  torch.Size([1, 1, 45, 1])\n",
-      "train_batch_count: 205\n",
-      "test_batch_count:  1\n"
+      "(250, 123)\n"
      ]
     }
    ],
@@ -41,6 +21,7 @@
     "from torch.autograd import Variable\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "import time\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -56,10 +37,47 @@
     "print(dataset.shape)\n",
     "# print(dataset.tail())\n",
     "\n",
+    "# 将需要预测的数据\"future\"缩放在[-1,1]之间\n",
+    "# scaler = MinMaxScaler(feature_range=(-1, 1))\n",
+    "# y_scaled = scaler.fit_transform(np.array(dataset['future']).reshape(-1,1))\n",
+    "# dataset['future'] = y_scaled\n",
+    "# y_rev = scaler.inverse_transform(np.array(dataset['future']).reshape(-1,1))\n",
+    "# print(y_rev)\n",
+    "\n",
+    "# 这样写更快.（如果第0列就是 future的话）\n",
+    "# dataset['future'] = scaler.fit_transform(dataset)[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3a953d8a-5f64-4bb2-8b9f-a2e50fb34193",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rolling_data shape: (209, 42, 123)\n",
+      "seq count: 209\n",
+      "seq length: 42\n",
+      "total batch count: 209\n",
+      "batch size: 1\n",
+      "rolling_data: torch.Size([209, 1, 42, 123])\n",
+      "train_x: torch.Size([208, 1, 42, 122])\n",
+      "train_y: torch.Size([208, 1, 42, 1])\n",
+      "test_x:  torch.Size([1, 1, 42, 122])\n",
+      "test_y:  torch.Size([1, 1, 42, 1])\n",
+      "train_batch_count: 208\n",
+      "test_batch_count:  1\n"
+     ]
+    }
+   ],
+   "source": [
     "# 方法2，将数据按照BATCH_SIZE的窗口进行滑动，每个窗口数据做一组\n",
     "\n",
     "# # 数据转成sequence的格式，这里定义每个seq的长度\n",
-    "SEQ_LENGTH = 45\n",
+    "SEQ_LENGTH = 42\n",
     "BATCH_SIZE = 1                                                    # 注意：BATCH_SIZE是要能够整除seq_count的\n",
     "\n",
     "# 把数据切换成 BATCH_SIZE 的一个个batch\n",
@@ -109,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "3033e44d-4dfa-4a7f-8fa6-b96783b5ac61",
    "metadata": {},
    "outputs": [],
@@ -117,7 +135,7 @@
     "# 开始定义 LSTM 模型\n",
     "TIME_STEP = SEQ_LENGTH                                        # 一般这个单独设定，这里为了简单，还是直接就等于seq_len的方便。其实也就是等于最长的那个sequence length\n",
     "INPUT_SIZE = dataset.shape[1]-1\n",
-    "HIDDEN_SIZE = 768\n",
+    "HIDDEN_SIZE = 256\n",
     "NUM_LAYERS = 2\n",
     "\n",
     "np.random.seed(3)\n",
@@ -125,16 +143,13 @@
     "torch.cuda.manual_seed(3)\n",
     "\n",
     "class LSTMModel(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_layer_size, num_layers, output_size, dropout=0.2):\n",
+    "    def __init__(self, input_size, hidden_layer_size, num_layers, output_size, dropout=0.5):\n",
     "        super().__init__()\n",
     "        self.linear_1 = nn.Linear(input_size, hidden_layer_size)\n",
     "        self.relu = nn.ReLU()\n",
     "        self.lstm = nn.LSTM(input_size=hidden_layer_size, hidden_size=hidden_layer_size, num_layers=num_layers, batch_first=True, dropout=dropout)\n",
-    "        # self.dropout = nn.Dropout(dropout)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
     "        self.linear_2 = nn.Linear(hidden_layer_size, output_size)\n",
-    "        \n",
-    "        # self.h0 = torch.randn(NUM_LAYERS, batch_size, HIDDEN_SIZE).double().to(device)\n",
-    "        # self.c0 = torch.randn(NUM_LAYERS, batch_size, HIDDEN_SIZE).double().to(device)\n",
     "\n",
     "        self.h0 = torch.zeros(NUM_LAYERS, BATCH_SIZE, HIDDEN_SIZE).double().to(device)\n",
     "        self.c0 = torch.zeros(NUM_LAYERS, BATCH_SIZE, HIDDEN_SIZE).double().to(device)\n",
@@ -174,7 +189,10 @@
     "\n",
     "        # layer 1\n",
     "        x = self.linear_1(x)\n",
-    "        x = self.relu(x)\n",
+    "        x = self.dropout(x)\n",
+    "        \n",
+    "        # 去掉以后更拟合，但没有验证泛化能力如何\n",
+    "        # x = self.relu(x)\n",
     "        \n",
     "        # We need to detach as we are doing truncated backpropagation through time (BPTT)\n",
     "        # If we don't, we'll backprop all the way to the start even after going through another batch        \n",
@@ -190,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "927d866d-1743-432b-bcab-79879da807ad",
    "metadata": {},
    "outputs": [
@@ -198,16 +216,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9 of 100 epoch loss: 0.960093\n",
-      "learning rate: 0.01\n",
-      "19 of 100 epoch loss: 0.960457\n",
-      "learning rate: 0.009000000000000001\n",
-      "29 of 100 epoch loss: 0.958666\n",
-      "learning rate: 0.008100000000000001\n",
-      "39 of 100 epoch loss: 0.957986\n",
-      "learning rate: 0.007290000000000001\n",
-      "49 of 100 epoch loss: 0.958070\n",
-      "learning rate: 0.006561000000000002\n"
+      "9 of 1000 epoch loss: 1.024512\n",
+      "learning rate: 1e-06\n",
+      "19 of 1000 epoch loss: 0.996447\n",
+      "learning rate: 1e-06\n",
+      "29 of 1000 epoch loss: 0.984793\n",
+      "learning rate: 1e-06\n",
+      "39 of 1000 epoch loss: 0.969996\n",
+      "learning rate: 1e-06\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [12]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m loss \u001b[38;5;241m=\u001b[39m loss_func(pred, train_y[step])\n\u001b[0;32m     26\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[1;32m---> 27\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     28\u001b[0m torch\u001b[38;5;241m.\u001b[39mnn\u001b[38;5;241m.\u001b[39mutils\u001b[38;5;241m.\u001b[39mclip_grad_norm_(model\u001b[38;5;241m.\u001b[39mparameters(), max_norm\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m, norm_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m     29\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n",
+      "File \u001b[1;32mc:\\python38\\lib\\site-packages\\torch\\_tensor.py:307\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    298\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m    299\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    300\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[0;32m    301\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    305\u001b[0m         create_graph\u001b[38;5;241m=\u001b[39mcreate_graph,\n\u001b[0;32m    306\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs)\n\u001b[1;32m--> 307\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\python38\\lib\\site-packages\\torch\\autograd\\__init__.py:154\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    151\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m retain_graph \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    152\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[1;32m--> 154\u001b[0m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    155\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    156\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -221,13 +250,13 @@
     "# 初始化 LSTM 模型\n",
     "model = LSTMModel(input_size=INPUT_SIZE, hidden_layer_size=HIDDEN_SIZE, num_layers=NUM_LAYERS, output_size=1)\n",
     "model = model.to(device)\n",
-    "LR = 1e-2\n",
-    "loss_func = nn.MSELoss()\n",
+    "LR = 1e-6\n",
+    "loss_func = nn.MSELoss(reduction=\"mean\")\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LR, weight_decay=1e-3)\n",
     "\n",
     "\n",
     "# 训练 LSTM 模型; \n",
-    "epoches = 100\n",
+    "epoches = 1000\n",
     "epoch_loss = 0\n",
     "\n",
     "for epoch in range(epoches):\n",
@@ -243,34 +272,31 @@
     "        optimizer.step()\n",
     "        \n",
     "        epoch_loss += loss.data\n",
-    "\n",
-    "    if (epoch+1)%10 == 0:\n",
+    "        \n",
+    "    # print(loss.item())\n",
+    "    \n",
+    "    if loss.item() < 1e-4:\n",
+    "        print('Epoch [{}/{}], Loss: {:.5f}'.format(epoch+1, epoches, loss.item()))\n",
+    "        print(\"The loss value is reached\")\n",
+    "        break\n",
+    "    elif (epoch+1)%10 == 0:\n",
     "        print(\"{} of {} epoch loss: {:.6f}\".format(epoch, epoches, epoch_loss.item()))\n",
     "        print(\"learning rate: {}\".format(optimizer.state_dict()['param_groups'][0]['lr']))\n",
-    "        for p in optimizer.param_groups:\n",
-    "            p['lr'] *= 0.9\n",
+    "        # for p in optimizer.param_groups:\n",
+    "            # p['lr'] *= 0.95\n",
     "    \n",
-    "    epoch_loss = 0\n"
+    "    epoch_loss = 0\n",
+    "\n",
+    "plt.plot(epoch_loss_list)\n",
+    "plt.show()    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c299f19a-459b-4ee0-9290-063b98fdaad2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_21360\\512750543.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_x\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mtest_y\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtest_y\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcpu\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mpred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpred\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcpu\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pred = model(test_x[0])\n",
     "\n",
@@ -279,15 +305,18 @@
     "\n",
     "loss = loss_func(pred, test_y[0])\n",
     "print(\"loss: {:.6f}\".format(loss.item()))\n",
+    "\n",
+    "# print(scaler.inverse_transform(pred))\n",
+    "\n",
     "print(\"预测明天涨跌: {}\".format(pred[-1][-1].data*100))\n",
     "\n",
     "# actual_line = np.array(test_y[0]).flatten().tolist()\n",
     "# pred_line = pred.data.numpy().flatten().tolist()\n",
     "\n",
-    "actual_line = np.array(test_y[0][-1]).flatten().tolist()\n",
+    "scaledl_line = np.array(test_y[0][-1]).flatten().tolist()\n",
     "pred_line = pred[-1].data.numpy().flatten().tolist()\n",
     "\n",
-    "plt.plot(actual_line, 'r--')\n",
+    "plt.plot(scaled_line, 'r--')\n",
     "plt.plot(pred_line, 'b-')\n",
     "plt.show()"
    ]
@@ -317,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
