--- a/jupyterlab/LTSM_Predict.ipynb
+++ b/jupyterlab/LTSM_Predict.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "3033e44d-4dfa-4a7f-8fa6-b96783b5ac61",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
     "TIME_STEP = SEQ_LENGTH                                        # 一般这个单独设定，这里为了简单，还是直接就等于seq_len的方便。其实也就是等于最长的那个sequence length\n",
     "INPUT_SIZE = dataset.shape[1]-1\n",
     "HIDDEN_SIZE = 256\n",
-    "NUM_LAYERS = 2\n",
+    "NUM_LAYERS = 1\n",
     "\n",
     "np.random.seed(3)\n",
     "torch.manual_seed(3)\n",
@@ -147,12 +147,15 @@
     "        super().__init__()\n",
     "        self.linear_1 = nn.Linear(input_size, hidden_layer_size)\n",
     "        self.relu = nn.ReLU()\n",
-    "        self.lstm = nn.LSTM(input_size=hidden_layer_size, hidden_size=hidden_layer_size, num_layers=num_layers, batch_first=True, dropout=dropout)\n",
+    "        self.lstm1 = nn.LSTM(input_size=hidden_layer_size, hidden_size=int(hidden_layer_size/2), num_layers=num_layers, batch_first=True)\n",
+    "        self.lstm2 = nn.LSTM(input_size=int(hidden_layer_size/2), hidden_size=hidden_layer_size, num_layers=num_layers, batch_first=True)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        self.linear_2 = nn.Linear(hidden_layer_size, output_size)\n",
     "\n",
-    "        self.h0 = torch.zeros(NUM_LAYERS, BATCH_SIZE, HIDDEN_SIZE).double().to(device)\n",
-    "        self.c0 = torch.zeros(NUM_LAYERS, BATCH_SIZE, HIDDEN_SIZE).double().to(device)\n",
+    "        self.h1 = torch.zeros(NUM_LAYERS, BATCH_SIZE, int(hidden_layer_size/2)).double().to(device)\n",
+    "        self.c1 = torch.zeros(NUM_LAYERS, BATCH_SIZE, int(hidden_layer_size/2)).double().to(device)\n",
+    "        self.h2 = torch.zeros(NUM_LAYERS, BATCH_SIZE, hidden_layer_size).double().to(device)\n",
+    "        self.c2 = torch.zeros(NUM_LAYERS, BATCH_SIZE, hidden_layer_size).double().to(device)\n",
     "        \n",
     "        self.init_weights3()\n",
     "\n",
@@ -175,14 +178,20 @@
     "                nn.init.kaiming_normal_(param)    \n",
     "    \n",
     "    def init_weights3(self):\n",
-    "        for name, param in self.lstm.named_parameters():\n",
+    "        for name, param in self.lstm1.named_parameters():\n",
     "            if 'bias' in name:\n",
     "                nn.init.constant_(param, 0.0)\n",
     "            elif 'weight_ih' in name:\n",
     "                nn.init.orthogonal_(param)\n",
     "            elif 'weight_hh' in name:\n",
     "                nn.init.orthogonal_(param)\n",
-    "                \n",
+    "        for name, param in self.lstm2.named_parameters():\n",
+    "            if 'bias' in name:\n",
+    "                nn.init.constant_(param, 0.0)\n",
+    "            elif 'weight_ih' in name:\n",
+    "                nn.init.orthogonal_(param)\n",
+    "            elif 'weight_hh' in name:\n",
+    "                nn.init.orthogonal_(param)\n",
     "                \n",
     "    def forward(self, x):\n",
     "        batchsize = x.shape[0]\n",
@@ -198,9 +207,11 @@
     "        # If we don't, we'll backprop all the way to the start even after going through another batch        \n",
     "        # LSTM layer\n",
     "        # lstm_out, (h_n, c_n) = self.lstm(x, (self.h0.detach(), self.c0.detach()))\n",
-    "        lstm_out, (h_n, c_n) = self.lstm(x, (self.h0, self.c0))\n",
+    "        \n",
+    "        lstm1_out, (h1_n, c1_n) = self.lstm1(x, (self.h1, self.c1))\n",
+    "        lstm_out, (h_n, c_n) = self.lstm2(lstm1_out, (self.h2, self.c2))\n",
     "\n",
-    "        # lstm_out = self.dropout(lstm_out)\n",
+    "        lstm_out = self.dropout(lstm_out)\n",
     "        \n",
     "        predictions = self.linear_2(lstm_out)\n",
     "        return predictions\n"
@@ -208,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "927d866d-1743-432b-bcab-79879da807ad",
    "metadata": {},
    "outputs": [
@@ -216,27 +227,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9 of 1000 epoch loss: 1.024512\n",
-      "learning rate: 1e-06\n",
-      "19 of 1000 epoch loss: 0.996447\n",
-      "learning rate: 1e-06\n",
-      "29 of 1000 epoch loss: 0.984793\n",
-      "learning rate: 1e-06\n",
-      "39 of 1000 epoch loss: 0.969996\n",
-      "learning rate: 1e-06\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [12]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m loss \u001b[38;5;241m=\u001b[39m loss_func(pred, train_y[step])\n\u001b[0;32m     26\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[1;32m---> 27\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     28\u001b[0m torch\u001b[38;5;241m.\u001b[39mnn\u001b[38;5;241m.\u001b[39mutils\u001b[38;5;241m.\u001b[39mclip_grad_norm_(model\u001b[38;5;241m.\u001b[39mparameters(), max_norm\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m, norm_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m     29\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n",
-      "File \u001b[1;32mc:\\python38\\lib\\site-packages\\torch\\_tensor.py:307\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    298\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m    299\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    300\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[0;32m    301\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    305\u001b[0m         create_graph\u001b[38;5;241m=\u001b[39mcreate_graph,\n\u001b[0;32m    306\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs)\n\u001b[1;32m--> 307\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\python38\\lib\\site-packages\\torch\\autograd\\__init__.py:154\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    151\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m retain_graph \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    152\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[1;32m--> 154\u001b[0m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    155\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    156\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "9 of 1000 epoch loss: 1.079970\n",
+      "19 of 1000 epoch loss: 1.037143\n",
+      "29 of 1000 epoch loss: 1.018137\n",
+      "39 of 1000 epoch loss: 0.994000\n",
+      "49 of 1000 epoch loss: 0.983136\n",
+      "59 of 1000 epoch loss: 0.977956\n",
+      "69 of 1000 epoch loss: 0.972966\n",
+      "79 of 1000 epoch loss: 0.962144\n",
+      "89 of 1000 epoch loss: 0.959074\n",
+      "99 of 1000 epoch loss: 0.958690\n",
+      "109 of 1000 epoch loss: 0.956394\n",
+      "119 of 1000 epoch loss: 0.946230\n",
+      "129 of 1000 epoch loss: 0.949171\n"
      ]
     }
    ],
@@ -281,7 +284,7 @@
     "        break\n",
     "    elif (epoch+1)%10 == 0:\n",
     "        print(\"{} of {} epoch loss: {:.6f}\".format(epoch, epoches, epoch_loss.item()))\n",
-    "        print(\"learning rate: {}\".format(optimizer.state_dict()['param_groups'][0]['lr']))\n",
+    "        # print(\"learning rate: {}\".format(optimizer.state_dict()['param_groups'][0]['lr']))\n",
     "        # for p in optimizer.param_groups:\n",
     "            # p['lr'] *= 0.95\n",
     "    \n",
